--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,11 @@
             <version>1.5.4</version>
         </dependency>
     </dependencies>
-
+<distributionManagement>
+    <repository>
+        <id>github</id>
+        <name>Chathumal Sangeeth Apache Maven Packages</name>
+        <url>https://maven.pkg.github.com/cozyloon/QABase-Automation-Framework</url>
+    </repository>
+</distributionManagement>
 </project>
