--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.github.cozyloon.lets</groupId>
+    <groupId>io.github.cozyloon.lets</groupId>
     <artifactId>lets</artifactId>
-    <version>1.1.0</version>
+    <version>1.3.0</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
