--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 
     <groupId>io.github.cozyloon.lets</groupId>
     <artifactId>lets</artifactId>
-    <version>1.4.0</version>
+    <version>1.5.0</version>
 
-    <name>Lets</name>
+    <name>QECore.Lets</name>
     <description>Lets is a test automation framework based on selenium Java. This framework makes selenium easy to use.</description>
     <url>https://github.com/cozyloon/QABase-Automation-Framework</url>
 
@@ -23,8 +23,8 @@
         <developer>
             <name>Chathumal Sangeeth</name>
             <email>chathumalsangeeth5@gmail.com</email>
-            <organization>com.github.cozyloon</organization>
-            <organizationUrl>https://github.com/cozyloon</organizationUrl>
+            <organization>io.github.cozyloon</organization>
+            <organizationUrl>https://www.linkedin.com/in/chathumal-sangeeth/</organizationUrl>
         </developer>
     </developers>
 
@@ -37,7 +37,6 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
@@ -111,12 +110,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>7.4.0</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>5.3.0</version>
@@ -132,7 +125,7 @@
             <version>1.5.4</version>
         </dependency>
     </dependencies>
-    <distributionManagement>
+   <!-- <distributionManagement>
         <repository>
             <id>github</id>
             <name>Chathumal Sangeeth Apache Maven Packages</name>
@@ -142,5 +135,15 @@
             <id>ossrh</id>
             <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
+    </distributionManagement>-->
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
     </distributionManagement>
 </project>
