--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,12 @@
         </dependency>
     </dependencies>
   
+   <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/cozyloon/QABase-Automation-Framework</url>
+    </repository>
+  </distributionManagement>
+  
 </project>
