--- a/pom.xml
+++ b/pom.xml
@@ -44,4 +44,24 @@
     </repository>
   </distributionManagement>
   
+  <build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-release-plugin</artifactId>
+            <version>3.0.0-M1</version> <!-- You can specify the latest version -->
+            <configuration>
+                <!-- Customize release configuration if needed -->
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
+<scm>
+    <connection>scm:git:https://github.com/cozyloon/QABase-Automation-Framework.git</connection>
+    <developerConnection>scm:git:https://github.com/cozyloon/QABase-Automation-Framework.git</developerConnection>
+    <url>https://github.com/cozyloon/QABase-Automation-Framework</url>
+    <tag>HEAD</tag>
+</scm>
+
 </project>
