--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,7 +1,9 @@
 name: Publish package to GitHub Packages
 on:
-  release:
-    types: [created]
+  pull_request:
+    types: [closed]
+    branches:
+      - master
 jobs:
   publish:
     runs-on: ubuntu-latest
